--- a/content/themes/blect/assets/css/less/skin.less
+++ b/content/themes/blect/assets/css/less/skin.less
@@ -1,4 +1,4 @@
-@bootstrapURI:	"../../framework/lib/bootstrap/3.2.0/less";
+@bootstrapURI:	"../../../../../../vendor/bootstrap/less";
 
 // Core variables and mixins
 @import "variables.less";
@@ -51,5 +51,9 @@
 @import "@{bootstrapURI}/utilities.less";
 @import "@{bootstrapURI}/responsive-utilities.less";
 
-/** less */
+/** Finally Theme Less */
+@import "WPstuffs.less";
+@import "helper.less";
+@import "layout.less";
+@import "navs.less";
 @import "theme.less";
