--- a/content/themes/blect/assets/css/less/theme.less
+++ b/content/themes/blect/assets/css/less/theme.less
@@ -1,118 +1,3 @@
-/*basic*/
-/*
-db   d8b   db  .d88b.  d8888b. d8888b. d8888b. d8888b. d88888b .d8888. .d8888. 
-88   I8I   88 .8P  Y8. 88  `8D 88  `8D 88  `8D 88  `8D 88'     88'  YP 88'  YP 
-88   I8I   88 88    88 88oobY' 88   88 88oodD' 88oobY' 88ooooo `8bo.   `8bo.   
-Y8   I8I   88 88    88 88`8b   88   88 88~~~   88`8b   88~~~~~   `Y8b.   `Y8b. 
-`8b d8'8b d8' `8b  d8' 88 `88. 88  .8D 88      88 `88. 88.     db   8D db   8D 
- `8b8' `8d8'   `Y88P'  88   YD Y8888D' 88      88   YD Y88888P `8888Y' `8888Y' 
-*/   
-
-/* Images */
-.alignleft{float:left}.alignright{float:right}.aligncenter{display:block;margin-left:auto;margin-right:auto}img.alignleft{margin:5px 20px 5px 0}.wp-caption.alignleft{margin:5px 10px 5px 0}img.alignright{margin:5px 0 5px 20px}.wp-caption.alignright{margin:5px 0 5px 10px}img.aligncenter{margin:5px auto}img.alignnone{margin:5px 0}.entry-caption,.gallery-caption,.wp-caption .wp-caption-text{color:#220e10;font-size:18px;font-style:italic;font-weight:300}.rsswidget img,img.wp-smiley{border:0;border-radius:0;box-shadow:none;margin-bottom:0;margin-top:0;padding:0}.wp-caption.alignleft+ol,.wp-caption.alignleft+ul{list-style-position:inside}
-
-
-/*
-db       .d8b.  db    db  .d88b.  db    db d888888b 
-88      d8' `8b `8b  d8' .8P  Y8. 88    88 `~~88~~' 
-88      88ooo88  `8bd8'  88    88 88    88    88    
-88      88~~~88    88    88    88 88    88    88    
-88booo. 88   88    88    `8b  d8' 88b  d88    88    
-Y88888P YP   YP    YP     `Y88P'  ~Y8888P'    YP   
-*/
-
-/**
- * BODY
- */
-body                    { }
-
-/**
- * -Page
- */
-#page                   { }
-
-/**
- * --Header
- */
-#masthead               { }
-
-/**
- * --Main
- */
-#main                   { }
-
-/**
- * --Footer
- */
-#colophon               { }
-.site-info              { .make-md-column(12); }
- 
-/**
- * ---Primary
- */
-#primary                { .make-md-column(8); }
-
-/**
- * ---Secondary
- */
-#secondary              { .make-md-column(4); }
-
-/**
- * ---Tertiary
- */
-#tertiary               { }
-
-
-
-/*
-   ____    __  __            _  _           ___                      _            
-  / __ \  |  \/  |  ___   __| |(_)  __ _   / _ \  _   _   ___  _ __ (_)  ___  ___ 
- / / _` | | |\/| | / _ \ / _` || | / _` | | | | || | | | / _ \| '__|| | / _ \/ __|
-| | (_| | | |  | ||  __/| (_| || || (_| | | |_| || |_| ||  __/| |   | ||  __/\__ \
- \ \__,_| |_|  |_| \___| \__,_||_| \__,_|  \__\_\ \__,_| \___||_|   |_| \___||___/
-  \____/  
-*/
-/* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm-min) { 
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: @screen-md-min) { 
-}
-
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: @screen-lg-min) {
-}
-
-/*
-.88b  d88. d88888b d8b   db db    db 
-88'YbdP`88 88'     888o  88 88    88 
-88  88  88 88ooooo 88V8o 88 88    88 
-88  88  88 88~~~~~ 88 V8o88 88    88 
-88  88  88 88.     88  V888 88b  d88 
-YP  YP  YP Y88888P VP   V8P ~Y8888P' 
-*/
-
-/*
-   ____    __  __            _  _           ___                      _            
-  / __ \  |  \/  |  ___   __| |(_)  __ _   / _ \  _   _   ___  _ __ (_)  ___  ___ 
- / / _` | | |\/| | / _ \ / _` || | / _` | | | | || | | | / _ \| '__|| | / _ \/ __|
-| | (_| | | |  | ||  __/| (_| || || (_| | | |_| || |_| ||  __/| |   | ||  __/\__ \
- \ \__,_| |_|  |_| \___| \__,_||_| \__,_|  \__\_\ \__,_| \___||_|   |_| \___||___/
-  \____/  
-*/
-/* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm-min) { 
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: @screen-md-min) { 
-}
-
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: @screen-lg-min) {
-}
-
 /*
  .o88b.  .d88b.  d8b   db d888888b d88888b d8b   db d888888b 
 d8P  Y8 .8P  Y8. 888o  88 `~~88~~' 88'     888o  88 `~~88~~' 
@@ -120,124 +5,69 @@ d8P  Y8 .8P  Y8. 888o  88 `~~88~~' 88'     888o  88 `~~88~~'
 8b      88    88 88 V8o88    88    88~~~~~ 88 V8o88    88    
 Y8b  d8 `8b  d8' 88  V888    88    88.     88  V888    88    
  `Y88P'  `Y88P'  VP   V8P    YP    Y88888P VP   V8P    YP  
-*/
+ */
 /**
  * Content
  */
-#Content                  { }
+#content{
+}
 
 /**
  * -Content Headers
  */
-.archive-header           { }
-
-/** Edit link that appears when logged in */
-.edit-link                { display: inline-block;
-  a                       { .btn; .btn-default; .btn-xs; }
+.archive-header{ 
 }
+
+
 
 /** General settings on entry meta */
-.entry-meta               { font-family: @font-family-serif; font-size: .85em;
-  .entry-utility-prep     { }
-  .entry-date             { display: inline-block; }
-  .author                 { font-family: @font-family-sans-serif; font-style: normal; text-transform: uppercase; font-weight: 800; }
-  .categories-links       { display: inline-block; }
-  .tags-links             { display: block; text-align: left; margin-bottom: @line-height-computed;
-    a                     { font-family: @font-family-sans-serif; font-style: normal; margin-bottom: 3px; }
-  }
+.entry-meta{
+    font-family: @font-family-serif;
+    font-size: 86%;
+    color:@skin-gray-lighter;
+}
+.entry-utility-prep{
+}
+.entry-date{ 
+    font-family: @font-family-sans-serif;
+}
+.author{ 
+}
+.categories-links{ 
+}
+.tags-links{ 
+}
+.entry-header{
+    position: relative;
+}             
+.entry-title{
+}
+/** Edit link that appears when logged in */
+.edit-link{ 
+    position: absolute;
+    top: -19px;
+    right: 0;
 }
 
-.entry-header             { 
-  .entry-title            { word-wrap: break-word; .h3;}
+.entry-summary{
+    margin-top:@line-height-computed / 4;
 }
 
-/** Author stuffs */
-.author-info              { padding: ( @line-height-computed * 2 ) 0; border-top: 1px solid @gray-lighter;
-  .author-avatar          { }
-  .author-description     {
-    .author-title         { font-family: @headings-font-family; font-style: normal; .h3; }
-    .author-bio           { }
-    .author-link          { text-transform: uppercase; font-family: @headings-font-family; font-style: normal;  }
-  }
-  
+.list-title{
+    font-size: @font-size-h4;
 }
-
 
 /**
- * Content
+ * Media
  */
-.hentry                   { 
-  // all images and div caption wrapper must be responsive;
-  img, .wp-caption        { max-width: 100%; height: auto; }               
+.media{
 
-  .entry-header           {
-    .entry-meta           { padding-bottom: @line-height-computed / 2; }
-    h1.entry-title        { }
-    h2.entry-title        { }
-    .entry-title          { }
-      a                   { 
-      &:hover             { }
-      }
-  }
-  .entry-content          { padding: @line-height-computed 0; text-align: left; }
-  .entry-meta             { 
-    .entry-utility-prep   { }
-    .entry-date           { }
-  }
-  footer.entry-meta       { }
-  
 }
 
-/** Hentry in list */
-.hentry-list              { 
-  .entry-header           {
-    h1.entry-title        { }
-    h2.entry-title        { }
-  }
-}
 
-/** Comments */
-#comments                 { }
-
-/** Images */
-.hentry                   {
-  //.img-responsive         { max-width:96%; background-color: fade( #000, 50% ); padding: 2%;  }
-}
-
-/** Category */
-
-.category-archive-meta    { }
-
-
-
-/**
- * Media Queries
- */
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: @screen-md) {
-.entry-meta               { text-align: left; }
-/** Author stuffs */
-.author-info              { 
-  .author-avatar          { }
-  .author-description     {
-    .author-title         { margin-top:0; }
-    .author-bio           { }
-    .author-link          { }
-  }
-  
-}
-.hentry                   {
-  .entry-header           { text-align: left; }
-}
-}
-/*
-   ____    __  __            _  _           ___                      _            
-  / __ \  |  \/  |  ___   __| |(_)  __ _   / _ \  _   _   ___  _ __ (_)  ___  ___ 
- / / _` | | |\/| | / _ \ / _` || | / _` | | | | || | | | / _ \| '__|| | / _ \/ __|
-| | (_| | | |  | ||  __/| (_| || || (_| | | |_| || |_| ||  __/| |   | ||  __/\__ \
- \ \__,_| |_|  |_| \___| \__,_||_| \__,_|  \__\_\ \__,_| \___||_|   |_| \___||___/
-  \____/  
-*/
+///////////////////
+// MEDIA QUERIES //
+///////////////////
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) { 
 }
@@ -249,17 +79,12 @@ Y8b  d8 `8b  d8' 88  V888    88    88.     88  V888    88
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: @screen-lg-min) {
 }
-/*
-         _____                                _        
-   ____ |_   _|                              | |       
-  / __ \  | |  _ __ ___   _ __    ___   _ __ | |_  ___ 
- / / _` | | | | '_ ` _ \ | '_ \  / _ \ | '__|| __|/ __|
-| | (_| |_| |_| | | | | || |_) || (_) || |   | |_ \__ \
- \ \__,_|\___/|_| |_| |_|| .__/  \___/ |_|    \__||___/
-  \____/                 | |                           
-                         |_|  
-*/
-@import "part-grid-isotope.less";
+
+
+
+
+
+
 
 /*
 .88b  d88.  .d88b.  d8888b. db    db db      d88888b .d8888. 
@@ -268,15 +93,28 @@ Y8b  d8 `8b  d8' 88  V888    88    88.     88  V888    88
 88  88  88 88    88 88   88 88    88 88      88~~~~~   `Y8b. 
 88  88  88 `8b  d8' 88  .8D 88b  d88 88booo. 88.     db   8D 
 YP  YP  YP  `Y88P'  Y8888D' ~Y8888P' Y88888P Y88888P `8888Y' 
-*/
-/*
-   ____    __  __            _  _           ___                      _            
-  / __ \  |  \/  |  ___   __| |(_)  __ _   / _ \  _   _   ___  _ __ (_)  ___  ___ 
- / / _` | | |\/| | / _ \ / _` || | / _` | | | | || | | | / _ \| '__|| | / _ \/ __|
-| | (_| | | |  | ||  __/| (_| || || (_| | | |_| || |_| ||  __/| |   | ||  __/\__ \
- \ \__,_| |_|  |_| \___| \__,_||_| \__,_|  \__\_\ \__,_| \___||_|   |_| \___||___/
-  \____/  
-*/
+ */
+/**
+ * Breadcrumbs
+ */
+#crumbs{
+    font-size: 80%;
+
+    .delimiter{
+        margin: 0 @line-height-computed / 8;
+    }
+}
+
+/**
+ * Widget Area
+ */
+.widget-title{
+    .h4;
+}
+
+///////////////////
+// MEDIA QUERIES //
+///////////////////
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) { 
 }
@@ -289,6 +127,12 @@ YP  YP  YP  `Y88P'  Y8888D' ~Y8888P' Y88888P Y88888P `8888Y'
 @media (min-width: @screen-lg-min) {
 }
 
+
+
+
+
+
+
 /*
  .o88b.  .d88b.  .88b  d88. d8888b. .d8888. 
 d8P  Y8 .8P  Y8. 88'YbdP`88 88  `8D 88'  YP 
@@ -296,15 +140,10 @@ d8P  Y8 .8P  Y8. 88'YbdP`88 88  `8D 88'  YP
 8b      88    88 88  88  88 88~~~     `Y8b. 
 Y8b  d8 `8b  d8' 88  88  88 88      db   8D 
  `Y88P'  `Y88P'  YP  YP  YP 88      `8888Y' 
-*/
-/*
-   ____    __  __            _  _           ___                      _            
-  / __ \  |  \/  |  ___   __| |(_)  __ _   / _ \  _   _   ___  _ __ (_)  ___  ___ 
- / / _` | | |\/| | / _ \ / _` || | / _` | | | | || | | | / _ \| '__|| | / _ \/ __|
-| | (_| | | |  | ||  __/| (_| || || (_| | | |_| || |_| ||  __/| |   | ||  __/\__ \
- \ \__,_| |_|  |_| \___| \__,_||_| \__,_|  \__\_\ \__,_| \___||_|   |_| \___||___/
-  \____/  
-*/
+ */
+///////////////////
+// MEDIA QUERIES //
+///////////////////
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) { 
 }
