--- a/content/themes/blect/assets/css/less/admin.less
+++ b/content/themes/blect/assets/css/less/admin.less
@@ -3,3 +3,10 @@
 .bootstrap-wrapper {
 	@import (less) url("@{bootstrapURI}/bootstrap.less");
 }
+
+/**
+ * Post Listing
+ */
+th#taxonomy-publisher{
+	width:10%;
+}
