--- a/content/themes/blect/assets/css/less/theme.less
+++ b/content/themes/blect/assets/css/less/theme.less
@@ -10,21 +10,30 @@ Y8b  d8 `8b  d8' 88  V888    88    88.     88  V888    88
  * Content
  */
 #content{
+    &:after{
+        content: '';
+        display: block;
+        height: 1px;
+        clear:both;
+        float:none;
+    }
 }
-
 /**
  * -Content Headers
  */
 .archive-header{ 
 }
-
-
-
 /** General settings on entry meta */
 .entry-meta{
     font-family: @font-family-serif;
     font-size: 86%;
     color:@skin-gray-lighter;
+
+    .fa{
+        color:@skin-red;
+        font-size: 1.2em;
+        vertical-align: middle;
+    }
 }
 .entry-utility-prep{
 }
@@ -41,6 +50,11 @@ Y8b  d8 `8b  d8' 88  V888    88    88.     88  V888    88
     position: relative;
 }             
 .entry-title{
+    line-height: 1.2;
+
+    a{
+        color:@skin-gray;    
+    }
 }
 /** Edit link that appears when logged in */
 .edit-link{ 
@@ -53,36 +67,140 @@ Y8b  d8 `8b  d8' 88  V888    88    88.     88  V888    88
     margin-top:@line-height-computed / 4;
 }
 
-.list-title{
-    font-size: @font-size-h4;
+.list-title, 
+.title-md, 
+.title-sm{
+    font-size: @font-size-h5;
 }
 
 /**
  * Media
  */
+.entry-content{
+    .wp-caption{
+        margin-bottom: 20px;
+        &.aligncenter{
+            width: 100%!important;
+        }
+    }
+    img.aligncenter,
+    .wp-caption.aligncenter img{
+        width: 100%;
+    }
+}
 .media{
+  &:first-child{
+    margin-top: 15px;
+  }  
+}
+.media-top{
+    .media-left;
+}
+.entry-thumbnail {
+    img{
+        width: 116px;
+        max-width: 116px;
+        height: 65px;
+        .transition(~'opacity .25s');       
+    }
+    &:hover{
+        opacity:0.7;
+        .transition(~'opacity .25s');
+    }
 
 }
-
+.entry-thumbnail-thumbnail {
+    img{
+        width: 116px;
+        max-width: 116px;
+        height: 65px;
+    }
+}
+.entry-thumbnail-full {
+    img{
+        display: inline-block;
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+    }
+}
+.format-video{
+    a.entry-thumbnail{
+        position: relative;
+        text-align: center;
+        &:after{
+            content: "\f144";
+            display: inline-block;
+            font-family: 'fontawesome';
+            color: #fff;
+            width:40px;
+            height:40px;
+            font-size: 40px;
+            position: absolute;
+            top:50%;
+            left:50%;
+            line-height: 1;
+            margin-top: -20px;
+            margin-left:-20px;
+            .transition(~'all .1s');
+        }
+        &:hover:after{
+            .transform(~'scaleX(1.5) scaleY(1.5)');
+            .transition(~'all .1s');
+        }
+    }
+}
+/**
+ * 
+ */
 
 ///////////////////
 // MEDIA QUERIES //
 ///////////////////
+@media ( max-width: 480px) { 
+.entry-content{
+    img.alignleft,
+    img.alignright,
+    .wp-caption,
+    .wp-caption.alignleft img,
+    .wp-caption.alignright img{
+        width: 100%!important;
+    }
+}
+}
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) { 
+.list-title, .title-md{
+    font-size: @font-size-h4;
 }
+.entry-thumbnail-medium {
+    img{
+        width: 100%;
+        max-width: 360px;
+        height: auto;
+    }
+}
+.media-top{
+    display:block;
+    padding-top: 0;
+    padding-right: 0;
+    img{
+        margin-bottom: @line-height-computed / 6;
 
+    }
+}
+.media-left{
+    img{
+        margin-bottom: @line-height-computed / 6;
+    }
+}
+}
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: @screen-md-min) { 
 }
-
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: @screen-lg-min) {
 }
-
-
-
-
 
 
 
@@ -94,6 +212,283 @@ Y8b  d8 `8b  d8' 88  V888    88    88.     88  V888    88
 88  88  88 `8b  d8' 88  .8D 88b  d88 88booo. 88.     db   8D 
 YP  YP  YP  `Y88P'  Y8888D' ~Y8888P' Y88888P Y88888P `8888Y' 
  */
+/**
+ * Modules Styling
+ */
+.module{
+    padding: @line-height-computed 0 0;
+}
+
+.module-heading{
+    border-bottom: 2px solid @skin-gray-dark;
+    &.col-xs-12{
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: @grid-gutter-width / 2;
+        margin-right: @grid-gutter-width / 2;
+        width:auto;
+        float:none;
+    }
+}
+
+.module-title{
+    font-size: @font-size-h4;
+    color: #fff;
+    background-color: @skin-gray-dark; 
+    display: inline-block;
+    margin: 0 0 -2px;
+    padding: 10px;
+
+    a,
+    a:focus{
+        color: #fff;
+        text-decoration: none;
+    }
+    a:hover,
+    a:active{
+        color: @skin-red;
+
+        .skin-icon-plus:before,
+        .skin-icon-plus:after{
+            border-color: @skin-red;
+        }
+    }
+}
+
+.module-red{
+    .module-heading{
+        border-bottom: 2px solid @skin-red;
+    }
+    .module-title{
+        background-color: @skin-red; 
+    }
+}
+/**
+ * slideout module
+ */
+#related.static{
+    .related-header{
+        display: none;
+    }
+}
+
+/**
+ * Tagline Animation
+ */
+.tagline-wrap{
+    position: relative;
+    text-align: center;
+    margin-top: @line-height-computed / 4;
+}
+
+.tagline-img{
+    margin: 10px auto;
+}
+
+.tagline{
+    display: inline-block;
+    background: url(../img/taglinebg.png) -10px -13px no-repeat;
+    width: 8%;
+    height: 50px;
+
+    animation: animationFrames ease 5s;
+    animation-iteration-count: infinite;
+    transform-origin: 50% 50%;
+    animation-fill-mode:forwards; /*when the spec is finished*/
+    -webkit-animation: animationFrames ease 5s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-transform-origin: 50% 50%;
+    -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
+    -moz-animation: animationFrames ease 5s;
+    -moz-animation-iteration-count: infinite;
+    -moz-transform-origin: 50% 50%;
+    -moz-animation-fill-mode:forwards; /*FF 5+*/
+    -o-animation: animationFrames ease 5s;
+    -o-animation-iteration-count: infinite;
+    -o-transform-origin: 50% 50%;
+    -o-animation-fill-mode:forwards; /*Not implemented yet*/
+    -ms-animation: animationFrames ease 5s;
+    -ms-animation-iteration-count: infinite;
+    -ms-transform-origin: 50% 50%;
+    -ms-animation-fill-mode:forwards; /*IE 10+*/
+}
+@tagline-delay-ms : 200ms;
+.tagline-1{
+    width: 24px;
+    background-position: -18px -10px;
+    .animation-delay( @tagline-delay-ms * 0 ); 
+}
+.tagline-2{
+    width: 26px;
+    background-position: -44px -10px;
+    .animation-delay( @tagline-delay-ms * 1 ); 
+}
+.tagline-3{
+    width: 30px;
+    background-position: -73px -10px;
+    .animation-delay( @tagline-delay-ms * 2 ); 
+}
+.tagline-4{
+    width: 22px;
+    background-position: -106px -10px;
+    .animation-delay( @tagline-delay-ms * 3 );  
+}
+.tagline-5{
+    width: 46px;
+    background-position: -129px -10px;
+    .animation-delay( @tagline-delay-ms * 4 ); 
+}
+.tagline-6{
+    width: 46px;
+    background-position: -175px -10px;
+    .animation-delay( @tagline-delay-ms * 5 ); 
+}
+.tagline-7{
+    width: 7px;
+    background-position: -226px -10px;
+    .animation-delay( @tagline-delay-ms * 6 ); 
+}
+.tagline-8{
+    width: 30px;
+    background-position: -247px -10px;
+    .animation-delay( @tagline-delay-ms * 7 ); 
+}
+.tagline-9{
+    width: 29px;
+    background-position: -280px -10px;
+    .animation-delay( @tagline-delay-ms * 8 ); 
+}
+.tagline-10{
+    width: 30px;
+    background-position: -311px -10px;
+    .animation-delay( @tagline-delay-ms * 9 ); 
+}
+.tagline-11{
+    width: 21px;
+    background-position: -344px -10px;
+    .animation-delay( @tagline-delay-ms * 10 ); 
+}
+.tagline-12{
+    width: 45px;
+    background-position: -367px -10px;
+    .animation-delay( @tagline-delay-ms * 11 ); 
+}
+.tagline-13{
+    width: 45px;
+    background-position: -412px -10px;
+    .animation-delay( @tagline-delay-ms * 12 ); 
+}
+@keyframes animationFrames {
+    0% {
+        transform:  scaleX(1.00) scaleY(1.00)  ;
+    }
+    15% {
+        transform:  scaleX(1.15) scaleY(1.15)  ;
+    }
+    50% {
+        transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+    100% {
+        transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+}
+@-moz-keyframes animationFrames {
+    0% {
+        -moz-transform:  scaleX(1.00) scaleY(1.00)  ;
+    }
+    15% {
+        -moz-transform:  scaleX(1.15) scaleY(1.15)  ;
+    }
+    50% {
+        -moz-transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+    100% {
+        -moz-transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+}
+@-webkit-keyframes animationFrames {
+    0% {
+        -webkit-transform:  scaleX(1.00) scaleY(1.00)  ;
+    }
+    15% {
+        -webkit-transform:  scaleX(1.15) scaleY(1.15)  ;
+    }
+    50% {
+        -webkit-transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+    100% {
+        -webkit-transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+}
+@-o-keyframes animationFrames {
+    0% {
+        -o-transform:  scaleX(1.00) scaleY(1.00)  ;
+    }
+    15% {
+        -o-transform:  scaleX(1.15) scaleY(1.15)  ;
+    }
+    50% {
+        -o-transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+    100% {
+        -o-transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+}
+@-ms-keyframes animationFrames {
+    0% {
+        -ms-transform:  scaleX(1.00) scaleY(1.00)  ;
+    }
+    15% {
+        -ms-transform:  scaleX(1.15) scaleY(1.15)  ;
+    }
+    50% {
+        -ms-transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+    100% {
+        -ms-transform:  scaleX(1.0) scaleY(1.00)  ;
+    }
+}
+
+/**
+ * Pager
+ */
+.pager li{
+    a{
+        width: 47.5%;
+        background: @skin-gray;
+        color:#fff;
+        &:hover,
+        &:focus{
+            color: @skin-gray;
+        }
+    }
+    span.title{
+        text-align: center;
+        display: inline-block;
+        max-width: 90%;
+        white-space: nowrap;
+        overflow: hidden;   
+        text-overflow: ellipsis;    
+        vertical-align: middle;
+    }
+}
+
+/**
+ * Search Bar
+ */
+.search-collapse{
+    &:after{
+        content: '';
+        display: block;
+        height:20px;
+    }
+}
+.search-wrap{
+    .close-search{
+        margin-right: 10px;
+    }
+}
+
 /**
  * Breadcrumbs
  */
@@ -112,26 +507,80 @@ YP  YP  YP  `Y88P'  Y8888D' ~Y8888P' Y88888P Y88888P `8888Y'
     .h4;
 }
 
+/**
+ * Adblock
+ */
+.adblock{
+    overflow: hidden;
+}
 ///////////////////
 // MEDIA QUERIES //
 ///////////////////
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) { 
+.module{
+    .entry-thumbnail-medium img{
+        width:345px;
+        height:193px;
+    }
+}
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: @screen-md-min) { 
+.module{
+    .entry-thumbnail-medium img{
+        width:293px;
+        height:164px;
+    }
+}
+#related.floating{
+    position: fixed;
+    z-index: 100;
+    right:0;
+    bottom:@line-height-computed;
+    padding: 0 @line-height-computed / 2 @line-height-computed / 2;
+    width: 340px;
+    background: #f7f7f7;
+    .transition(~'right .45s');
+    &.away{
+        right:-500px;
+        .transition(~'right .45s');
+    }
+    .related-header{
+        display: block;
+    }
+    .box-shadow(~'0 0 5px rgba(0,0,0,.3);');
+    .module{
+        padding-top: 0;
+    }
+    .module-heading{
+        display: none;
+    }
+    .hentry{
+        .make-sm-column(12);
+    }
+    .media-top{
+        .media-left;
+    }
+    .entry-thumbnail-medium{
+        .entry-thumbnail-thumbnail;
+    }
+    .title-md{
+        .title-sm;
+    }
+}
 }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: @screen-lg-min) {
+.module{
+    .entry-thumbnail-medium img{
+        width:360px;
+        height:201px;
+    }
 }
-
-
-
-
-
-
+}
 
 /*
  .o88b.  .d88b.  .88b  d88. d8888b. .d8888. 
@@ -141,15 +590,296 @@ d8P  Y8 .8P  Y8. 88'YbdP`88 88  `8D 88'  YP
 Y8b  d8 `8b  d8' 88  88  88 88      db   8D 
  `Y88P'  `Y88P'  YP  YP  YP 88      `8888Y' 
  */
+/**
+ * Kwicks
+ */
+.kwickswrap{
+    height:1px;
+    padding: 0px 0;
+    overflow: hidden;
+    background: @skin-gray-darker;
+    margin-top: 0;
+    .box-shadow(~'0 -0px 15px rgba(0,0,0,0.5)');
+}
+.kwicks {
+    height: 350px;
+    margin: 0 5px;
+
+    > li{
+        background-color: @skin-gray-darker;
+        height: 350px;
+        position: relative;
+    }
+    .transition(~'all .25s');
+
+    a,
+    a:focus{
+        text-decoration: none;
+        color:#fff;
+        margin-top: -100px;
+        -webkit-transform: translate3d(0,0,0);
+            transform: translate3d(0,0,0);
+        
+        .fa-stack{
+            position: relative;
+            top:-250px;
+            opacity: 0;
+            .transform(~'scaleX(0) scaleY(0)');
+            .transition(~'all .3s ease');
+        }
+
+        .fa-stack-2x{
+            color: rgba(0,0,0,.5);
+            .transition(~'all .25s');
+        }
+
+        h2{
+            margin-top: 10px;
+            position: relative;
+            top:500px;
+            opacity: 0;
+            .transition(~'all .3s ease');
+        }
+        &:hover,
+        &:active{
+            .fa-stack{
+                //.transform(~'scaleX(1.1) scaleY(1.1)');            
+                .transition(~'all .25s');
+            }
+            .fa-stack-2x{
+                color: rgba(0,0,0,.75);
+                .transition(~'all .25s');
+            }
+        }
+    }
+}
+
+.kwicks-img-holder{
+    position: absolute;
+    top:0;
+    height: 350px;
+    min-width: 533px;
+    width:100%;
+    background-repeat: no-repeat;
+    background-position: 0 center;
+    background-size: cover;
+    z-index: 0;
+    .transition(~'transform .7s');
+}
+
+.jumbowrap{
+    background: rgba(0,0,0,.5) url(../img/slashbg.png) repeat fixed;
+    position: relative;
+    z-index: 1;
+    .transition(~'all .7s');
+}
+
+.jumbo101{
+    width: 100%;
+    height: 350px;
+    background: url(../img/huge101onslider.png) 0 center no-repeat;
+    background-size: 400% auto;
+    .transition(~'all .25s');
+}
+
+.jumbo101-2{
+    background-position: 33.33% center;
+}
+.jumbo101-3{
+    background-position: 67% center;
+}
+.jumbo101-4{
+    background-position: 100% center;
+}
+
+.kwicks-expanded{ 
+    .kwicks-img-holder{
+        .transform(~'scaleX(1.4) scaleY(1.4)');
+        background-position: 100% center;
+        .transition(~'transform 20s, background 20s');
+    }
+
+    a,
+    a:focus{
+        .fa-stack{
+            top:-50px;
+            opacity: 1;
+            .transform(~'scaleX(1) scaleY(1)');
+            .transition(~'all .4s');
+        }
+
+        h2{
+            top:-50px;
+            opacity: 1;
+            .transition(~'all .3s .25s');
+        }
+    }
+
+    .jumbowrap,
+    .jumbo101{
+        opacity: 0.6;
+        background-color: transparent;
+        .transition(~'all .7s');
+
+    }
+}
+///////////////////
+// MEDIA QUERIES - Kwicks//
+///////////////////
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) { 
+.kwickswrap{
+    height:360px;
+    padding: 5px 0px;
+    margin-top: @line-height-computed / 2;
+}
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) { 
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) {
+.kwickswrap{
+    height:410px;
+}
+.kwicks, 
+.kwicks > li, 
+.kwicks-img-holder,
+.jumbo101{
+    height: 400px;
+}
+.kwicks-expanded{ 
+    .kwicks-img-holder{
+        //.transform(~'scaleX(1.3) scaleY(1.3)');
+    }
+}
+.kwicks h2{
+    .h3;
+}
+}
+
+/////////////////
+// OwlCarousel //
+/////////////////
+.owlcarouselwrap{
+    background: @skin-gray-darker;
+    border-top: 10px solid @skin-gray-darker;
+    padding-bottom: 3px;
+    a{
+        color:#fff;
+    }
+    .centerlinkwrap{
+        height: 200px;
+        padding-top: 100px;
+        top:0;
+    }
+}
+.owl-img-holder{
+    background-size: cover;
+    background-position: center center;
+    height: 200px;
+}
+.owl-theme .owl-controls .owl-page span{
+    background-color: #fff;
+}
+
+
+///////////
+// mmenu //
+///////////
+.mm-opening{
+    .icon-bar-1{
+        .transform(~'rotate( 45deg) translate( 2px, 9px ) ');
+    }
+    .icon-bar-2{
+        .transform(~'translate( -100px, 0 )');
+    }
+    .icon-bar-3{
+        .transform(~'rotate( -45deg ) translate( 2px, -9px )');
+    }
+}
+
+////////////////////////////////
+// WPP WordPress Popular Post //
+////////////////////////////////
+.wpp-list{
+    .list-unstyled;
+}
+
+/////////////////
+// wp_pagenavi //
+/////////////////
+.wp-pagenavi{
+    li{
+        display: inline;
+        a{
+            border-radius: 0!important;
+            margin: 0 2px;
+            border-width: 0;
+            display: none;
+        }
+        span{
+            display: none;   
+        }
+        span:hover,
+        span:focus,
+        span:active{
+            background-color: transparent;
+        }
+
+        &.active span{
+            border-radius: 0;
+            border-width: 0;
+        }
+    }
+
+    li.active span,
+    li a.previouspostslink,
+    li a.nextpostslink{
+        display: block;
+    }
+    li a.previouspostslink{
+        padding-right: 40px;
+    }
+    li a.nextpostslink{
+        padding-left: 40px;
+    }
+}
+
+
 ///////////////////
 // MEDIA QUERIES //
 ///////////////////
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-sm-min) { 
+.wp-pagenavi{
+    
+    li span.extend{
+        display: block;
+        padding: 2px 0 0;
+    }
+    li a.page{
+        display: block;
+    }
+    li a.previouspostslink{
+        padding-right: 12px;
+    }
+    li a.nextpostslink{
+        padding-left: 12px;
+    }
+}
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: @screen-md-min) { 
+.wp-pagenavi{
+    li a, 
+    li span{
+        display: block;
+    }
+}
 }
 
 /* Large devices (large desktops, 1200px and up) */
