Clean up project specifics

--- a/content/themes/blect/assets/css/less/navs.less
+++ b/content/themes/blect/assets/css/less/navs.less
@@ -62,12 +62,10 @@ VP   V8P YP   YP    YP    `8888Y'
 //////////////////////
 .navbar-blect-top{
     border-color: rgba(255,255,255,.2);
-    //background-color: rgba( 255,255,255,.3 );
+    background-color: @skin-gray-pastel-dark;
     min-height: 40px;
     font-size: 80%;
-    font-size:100%; //zh
     font-weight: bold;
-    font-weight: normal; //zh
 
     .navbar-nav>li{
         border-left: 1px solid rgba(255,255,255,.2);
@@ -90,30 +88,6 @@ VP   V8P YP   YP    YP    `8888Y'
         }
     }
 }
-
-//////////////////////////
-// navbar-blect-default //
-//////////////////////////
-// .navbar-blect-default{
-//     .navbar-nav>li{
-//         background-color: transparent;
-
-//         >a{
-//             color: @skin-gray-dark;
-//             padding: @line-height-computed / 1.5 @line-height-computed / 4;
-
-//             &:hover,
-//             &:focus,
-//             &:active{
-//                 color: darken( @skin-gray-lighter, 10% );
-//                 background-color: transparent;
-//             }
-//         }
-//         &.open>a{
-//             background-color: transparent;
-//         }
-//     }
-// }
 
 ///////////////////////////
 // navbar-blect-division //
