--- a/content/themes/blect/assets/css/less/variables.less
+++ b/content/themes/blect/assets/css/less/variables.less
@@ -61,7 +61,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:   Helvetica, Arial, sans-serif;
+@font-family-sans-serif:   'Helvetica Neue', Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
@@ -159,7 +159,7 @@
 
 //== Buttons
 //
-//## For each of Bootstrap's buttons, define text, background and border color.
+//## For each of Bootstrap' s buttons, define text, background and border color.
 
 @btn-font-weight:                normal;
 
