--- a/content/themes/blect/assets/css/less/layout.less
+++ b/content/themes/blect/assets/css/less/layout.less
@@ -10,7 +10,11 @@ Y88888P YP   YP    YP     `Y88P'  ~Y8888P'    YP
 /**
  * BODY
  */
+html{
+	height: 100%;
+}
 body{ 
+	min-height: 100%;
 }
 
 /**
