new less extension

--- a/content/themes/blect/assets/css/less/skin.less
+++ b/content/themes/blect/assets/css/less/skin.less
@@ -53,6 +53,8 @@
 
 /** Finally Theme Less */
 @import "WPstuffs.less";
+@import "ext_web-ui.less";
+@import "gravityform.less";
 @import "helper.less";
 @import "layout.less";
 @import "navs.less";
